Rewrite migration to real migration

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -255,6 +255,8 @@ services:
     arguments:
       - '@database_connection'
       - '@contao.doctrine.schema_provider'
+    tags:
+      - 'contao.migration'
 
   Netzmacht\ContaoWorkflowBundle\FrontendModule\TransitionFrontendModuleController:
     arguments:
