Workaround issue with automatic configuration of the ptable
See https://github.com/contao/contao/pull/5108

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -133,3 +133,7 @@ services:
   Netzmacht\ContaoWorkflowBundle\EventListener\Dca\CopyWorkflowCallbackListener:
     arguments:
       - '@database_connection'
+
+  Netzmacht\ContaoWorkflowBundle\EventListener\Hook\LoadDataContainerListener:
+    arguments:
+      - '@netzmacht.contao_toolkit.contao.input_adapter'
