Fix coding standard violations

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -136,4 +136,5 @@ services:
 
   Netzmacht\ContaoWorkflowBundle\EventListener\Hook\LoadDataContainerListener:
     arguments:
+      - '@netzmacht.contao_toolkit.dca.manager'
       - '@netzmacht.contao_toolkit.contao.input_adapter'
